k8s/apps/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: nginx:latest   # SAFE placeholder (replace later with GHCR)
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
